# semantic-query-agent

./: .dockerignore  .env.example  .flake8  .gitignore  CLAUDE.md  DESIGN_NOTES.md  Dockerfile  Makefile  README.md  TASK.md  docker-compose.yaml  pyproject.toml  run_test_questions.py  sales_data.json  semantic_model.yaml  test_questions.json
.github/workflows/: ci.yml
semantic_query_agent/: agent.py  config.py  database.py  main.py  models.py  prompts.py  semantic_model.py  sql_builder.py
static/: index.html
tests/: conftest.py  test_agent.py  test_api.py  test_database.py  test_regression.py  test_semantic_model.py  test_sql_builder.py
