[tool.poetry]
package-mode = false

[project]
name = "holisticon-test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "ymikevich",email = "eugene.mikevich@gmail.com"}
]
requires-python = "^3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
