[tool.poetry]
package-mode = false

[project]
name = "holisticon-test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "ymikevich",email = "eugene.mikevich@gmail.com"}
]
requires-python = "^3.11"
dependencies = [
    "langchain-openai (>=1.1.11,<2.0.0)",
    "langgraph (>=1.1.1,<2.0.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "duckdb (>=1.5.0,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
